--- a/KakaoTalk/app/src/main/res/values/colors.xml
+++ b/KakaoTalk/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="chatBackground">#FF9BBBD4</color>
+    <color name="opponentChatContentBackground">#FFFFFFFF</color>
+    <color name="myChatContentBackground">#FFFEf01B</color>
+    <color name="chatSendAtTextColor">#FF556677</color>
 </resources>
